--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,13 @@
-viber bot
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/main.css">
+    <meta name="robots" content="noindex,nofollow"/>
+    <title>virtual chat</title>
+</head>
+<body>
+<iframe name="simple_form" src="https://live.viber.com/#/testBotEnovate" scrolling="no" style="display: block; width: 400px; height: 600px; border: 0; margin: 10px auto"></iframe> 
+</body>
+</html> 
