--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
     <title>virtual chat</title>
 </head>
 <body>
+
 <iframe name="simple_form" src="https://live.viber.com/#/testBotEnovate" scrolling="no" style="display: block; width: 400px; height: 600px; border: 0; margin: 10px auto"></iframe> 
-</body>
+</body><script type="text/javascript">
+var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
+{widgetcode:"86e918a2af659d51c688968d6b7403f56f975623041fe5111c806200ebd83232", values:{},ready:function(){}};
+var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
+s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
+</script>
+<!-- <script type="text/javascript">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"86e918a2af659d51c688968d6b7403f56f975623041fe5111c806200ebd83232", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");</script> -->
+
 </html> 
